# bilibili-py

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
bilibili/: __init__.py  version.py
